# office-com-automation

./: .gitignore  CLAUDE.md  HANDOFF-excel-skill.md  HANDOFF.md  LICENSE  README.md  benchmark.md
.claude/: SETUP.md  settings.json
assets/sample-data/: README.md
benchmarks/: README.md  gen_fixtures.py
benchmarks/prompts/: README.md
benchmarks/results/: benchmark-results.json  benchmark-results.md  benchmark_report.md
csharp_addin/: register.ps1  unregister.ps1
csharp_addin/ExcelEditorAddin/: Connect.cs  ExcelEditorAddin.csproj
docs/: 00-com-overview.md  01-excel-object-model.md  backend-protocol.md  benchmark-spec.md  capability-table.md  excel-com-reference.md  pk-framework.md  roadmap.md  wine-sandbox-runtime.md
languages/cpp/: README.md
languages/cpp/src/: ops.h  (+8 more)
languages/csharp/: README.md
languages/jscript/: README.md
languages/openxml/: ExcelOps.csproj  README.md
languages/powershell/: README.md
languages/python/: README.md
languages/rust/: Cargo.toml
languages/rust/src/: com.rs  excel.rs  lib.rs  main.rs  tasks.rs
languages/rust/src/ops/: catalog.rs  dispatch.rs  mod.rs
languages/rust/tests/: capctl_verify.rs  excel_ops_cli.rs
languages/vba/: README.md
mcp_server/: excel_mcp.py  excel_mcp_addin.py
mcp_server_csharp/: .gitignore  README.md  build.ps1
mcp_server_csharp/ExcelMcp/: ExcelEngine.cs  ExcelMcp.csproj  Program.cs
mcp_server_dotnet/: ExcelEngine.cs  ExcelMcpDotnet.csproj  Program.cs  README.md
mcp_server_dotnet/Tools/: ExcelTools.cs
python_addin/: excel_pyaddin.py
spec/: capability-matrix.md  excel-tasks.md
(+35 files in other folders)
